# CANViewer

./: .gitignore  README.jp.md  README.md  main.py  main_.py  makefile  pyproject.toml
.github/workflows/: build.yml
asset/: icon.icns
docs/: development.md
scripts/: build_nuitka.py  install_linux_desktop.sh
src/: main.py
src/component/: baudrate_selector.py  bitrate_selector.py  can_message_editor.py  channel_selector.py  communication_controller.py  interface_selector.py  logbox.py  message_filter.py
src/utils/: can_handler.py  validator.py
